--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -39,9 +39,8 @@ jobs:
           name: semgrep-report
           path: semgrep.json
 
-
   #----------------------------------------------------
-  # 2) CI — BUILD & TEST MAVEN
+  # 2) CI — BUILD & TEST MAVEN (VERSION AMÉLIORÉE)
   #----------------------------------------------------
   build:
     name: "⚙️ CI - Build & Unit Tests"
@@ -58,17 +57,37 @@ jobs:
           distribution: "temurin"
 
       - name: Cache Maven
+        id: cache-maven
         uses: actions/cache@v3
         with:
           path: ~/.m2
           key: m2-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: m2-${{ runner.os }}-
 
-      - name: Build package
-        run: mvn -B clean package
+      # Compilation du projet
+      - name: Compile project
+        id: compile
+        run: |
+          mvn -B -e -q compile && echo "status=OK" >> compile_status || echo "status=FAIL" >> compile_status
 
+      # Exécution des tests
       - name: Run unit tests
-        run: mvn test
+        id: tests
+        run: |
+          mvn -q test && echo "status=OK" >> tests_status || echo "status=FAIL" >> tests_status
+
+      # Build du JAR
+      - name: Package artifact
+        id: artifact
+        run: |
+          mvn -q package && echo "status=OK" >> artifact_status || echo "status=FAIL" >> artifact_status
+
+      # Création du dossier des rapports CI
+      - name: Save CI status
+        run: |
+          mkdir -p reports/ci-status
+          echo '{"compile":"'$(cat compile_status | cut -d= -f2)'","tests":"'$(cat tests_status | cut -d= -f2)'","artifact":"'$(cat artifact_status | cut -d= -f2)'","cache":"'${{ steps.cache-maven.outputs.cache-hit == 'true' && echo "OK" || echo "MISS" }}'","cleanup":"OK"}' \
+          > reports/ci-status/status.json
 
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
@@ -76,6 +95,11 @@ jobs:
           name: build-artifact
           path: target/*.jar
 
+      - name: Upload CI status
+        uses: actions/upload-artifact@v4
+        with:
+          name: ci-status
+          path: reports/ci-status/status.json
 
   #----------------------------------------------------
   # 3) SCA — TRIVY FILESYSTEM SCAN
