--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -220,6 +220,30 @@ jobs:
           name: trivy-report
           path: trivy.json
 
+#----------------------------------------------------
+# 6-bis) PUSH DOCKER IMAGE TO DOCKER HUB
+#----------------------------------------------------
+docker_push:
+  name: "📤 Push Docker Image to Docker Hub"
+  needs: docker_scan
+  runs-on: ubuntu-latest
+
+  steps:
+    - uses: actions/checkout@v4
+
+    - uses: docker/setup-buildx-action@v3
+
+    - name: Login to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Build Docker Image
+      run: docker build -t devsecops:latest .
+
+    - name: Tag Docker Image
+      run: docker tag devsecops:latest karimarouchi/devsecops:latest
+
+    - name: Push Docker Image
+      run: docker push karimarouchi/devsecops:latest
 
   #----------------------------------------------------
   # 7) DAST — NIKTO
